@@ -1,8 +1,5 @@
 package seedu.address.testutil;
 
-
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import seedu.address.model.RecipeBook;
@@ -91,7 +88,6 @@ public class TypicalRecipes {
     }
 
     public static List<Recipe> getTypicalRecipes() {
-        return new ArrayList<>(Arrays.asList(AGLIO_OLIO, FRIED_RICE, DUCK_RICE, SUSHI, BEEF_TACO, SHOYU_RAMEN,
-                FISH_CHIPS, BOLOGNESE));
+        return List.of(AGLIO_OLIO, FRIED_RICE, DUCK_RICE, SUSHI, BEEF_TACO, SHOYU_RAMEN, FISH_CHIPS, BOLOGNESE);
     }
 }
